# Stendar-L

./: .gitignore  AGENTS.md  Anchor.toml  CODE_OF_CONDUCT.md  CONTRACT_TRADING_FUNCTIONS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
programs/stendar/: Cargo.toml  README.md
programs/stendar/src/: errors.rs  lib.rs  test_utils.rs
programs/stendar/src/contexts/: admin.rs  collateral.rs  lending.rs  mod.rs  payment.rs  pools.rs  proposals.rs  revolving.rs  trading.rs
programs/stendar/src/instructions/: admin_operations.rs  collateral.rs  lending.rs  mod.rs  payment_operations.rs  pools.rs  proposals.rs  revolving.rs  trading.rs
programs/stendar/src/state/: bot.rs  enums.rs  mod.rs  pools.rs  proposals.rs  query.rs  trading.rs
programs/stendar/src/utils/: fees.rs  interest.rs  liquidation.rs  mod.rs  oracle.rs  token.rs  trading.rs
programs/stendar/tests/: bot_batch_tests.rs  bot_integration_tests.rs  bot_performance_tests.rs  bot_query_tests.rs  bot_state_tests.rs  mvp_flow_security_tests.rs  proptest_arithmetic.rs  stendar.ts  treasury-integration.ts  treasury-operations.ts  treasury-security.ts  treasury-unit.ts
scripts/: apply-collateral-manifest.ts  audit-gate.js  check-deterministic-pending.js  check-idl-sync.js  pre-mainnet-listing-gate.sh  validate-collateral-listing.ts  validate-collateral-listings.js
sdk/: DIRECT_MODE.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
security/: mainnet-build-verification.json  mainnet-build-verification.schema.json  (+2 more)
(+155 files in other folders)
